z-index fix in aspects.html

--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 0;
+  z-index: 20;
 }
 
 .navigatorBtn{
